--- a/_change_log_doc_cn/2025-07-11.md
+++ b/_change_log_doc_cn/2025-07-11.md
@@ -11,7 +11,8 @@ content_markdown: >-
     * /v1/copy-trade/follower-position : 获取跟单者当前跟单持仓
     * /v1/copy-trade/follower-position-history: 获取跟单者历史跟单持仓
     * /v1/copy-trade/follower-balance-bill:  获取跟单者资金流水
-  * User Center-Referral Commission，更新以下接口:
+  
+  * 用户中心-邀请返佣，更新以下接口:
     * /v4/referal/invite/agent/rebate/data : 仅支持查询近3月数据
 ---
 
